# BattleShipAI

./: CMakeLists.txt  README.md
source/: AiPlayer.cpp  AiPlayer.h  Board.cpp  Board.h  CheatingAI.cpp  CheatingAI.h  Game.cpp  Game.h  GameFormat.cpp  GameFormat.h  HumanPlayer.cpp  HumanPlayer.h  InputValidation.cpp  InputValidation.h  Move.cpp  Move.h  Player.cpp  Player.h  RandomAI.cpp  RandomAI.h  SearchAndDestroyAI.cpp  SearchAndDestroyAI.h  Ship.cpp  Ship.h  main.cpp
